compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__invalid_parameter_label.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn func(thisIsALabel param: Int) { param }"
---
error: Invalid label name
  ┌─ /src/one/two.rakun:1:9
  │
1 │ fn func(thisIsALabel param: Int) { param }
  │         ^^^^^^^^^^^^ This is not a valid label name

Hint: Label names start with a lowercase letter and contain a-z, 0-9, or _.
Try: this_is_a_label
