compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__invalid_string_prefix_pattern_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1361
expression: "let assert \"prefix\" ++ coolSuffix = \"prefix-suffix\""
---
----- SOURCE CODE
let assert "prefix" ++ coolSuffix = "prefix-suffix"

----- ERROR
error: Invalid variable name
  ┌─ /src/one/two.rakun:1:24
  │
1 │ let assert "prefix" ++ coolSuffix = "prefix-suffix"
  │                        ^^^^^^^^^^ This is not a valid variable name

Hint: Variable names start with a lowercase letter and contain a-z, 0-9,
or _.
Try: cool_suffix
