compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__invalid_type_alias_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: type Fancy_Bool = Bool
---
----- SOURCE CODE
type Fancy_Bool = Bool

----- ERROR
error: Invalid type alias name
  ┌─ /src/one/two.rakun:1:6
  │
1 │ type Fancy_Bool = Bool
  │      ^^^^^^^^^^ This is not a valid type alias name

Hint: Type Alias names start with an uppercase letter and contain only
lowercase letters, numbers, and uppercase letters.
Try: FancyBool
