compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__invalid_variable_discard_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: let _boringNumber = 72
---
error: Invalid discard name
  ┌─ /src/one/two.rakun:1:5
  │
1 │ let _boringNumber = 72
  │     ^^^^^^^^^^^^^ This is not a valid discard name

Hint: Discard names start with _ and contain a-z, 0-9, or _.
Try: _boring_number
