compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__invalid_variable_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: let theAnswer = 42
---
error: Invalid variable name
  ┌─ /src/one/two.rakun:1:5
  │
1 │ let theAnswer = 42
  │     ^^^^^^^^^ This is not a valid variable name

Hint: Variable names start with a lowercase letter and contain a-z, 0-9,
or _.
Try: the_answer
