compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__list.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "[1, 2.0]"
---
error: Type mismatch
  ┌─ /src/one/two.rakun:1:5
  │
1 │ [1, 2.0]
  │     ^^^

All elements of a list must be the same type, but this one doesn't
match the one before it.

Expected type:

    Int

Found type:

    Float
