compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__mismatched_list_tail.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 2128
expression: "[\"wibble\", ..[1, 2]]"
---
error: Type mismatch
  ┌─ /src/one/two.rakun:1:14
  │
1 │ ["wibble", ..[1, 2]]
  │              ^^^^^^

All elements in a list must have the same type, but the elements of
this list don't match the type of the elements being prepended to it.

Expected type:

    List<String>

Found type:

    List<Int>
