compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__missing_variable_in_alternative_pattern.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1751
expression: "case [] { [x] | [] -> x _ -> 0 }"
---
----- SOURCE CODE
case [] { [x] | [] -> x _ -> 0 }

----- ERROR
error: Missing alternative pattern variable
  ┌─ /src/one/two.rakun:1:11
  │
1 │ case [] { [x] | [] -> x _ -> 0 }
  │           ^^^^^^^^^^^^^ This does not define all required variables

All alternative patterns must define the same variables as the initial
pattern, but the `x` variable is missing.
